[package]
name = "wthr"
version = "0.3.5"
authors = ["ludovic.pouey <gogopex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt="0.3.15"
reqwest={ version = "0.10.6", features = ["blocking"] }
serde_json="1.0.56"
serde="1.0.114"
serde_derive="1.0.114"
tokio = "0.2.21"
chrono = "0.4"
ansi_term = "0.12.1"
Inflector = "0.11.4"
