[package]
name = "wthr"
version = "0.4.0"
authors = ["ludovic.pouey <gogopex@gmail.com>"]
edition = "2018"

[dependencies]
structopt="0.3.15"
reqwest={ version = "0.10.7", features = ["blocking"] }
serde_json="1.0.57"
serde="1.0.114"
serde_derive="1.0.114"
tokio = "0.2.22"
chrono = "0.4.13"
ansi_term = "0.12.1"
Inflector = "0.11.4"
