[package]
name = "wthr"
version = "0.4.0"
authors = ["Ludovic Pouey <gogopex@gmail.com>"]
description = "A simple command line utility that displays weather information for a given city. "
edition = "2018"
readme = "README.md"
repository = "https://www.github.com/gogopex/wthr"
license = "MIT"
keywords = ["cli", "weather", "utility"]
categories = ["command-line-utilities"]

[dependencies]
structopt="0.3.15"
reqwest={ version = "0.10.7", features = ["blocking"] }
serde_json="1.0.57"
serde="1.0.114"
serde_derive="1.0.114"
tokio = "0.2.22"
chrono = "0.4.13"
ansi_term = "0.12.1"
Inflector = "0.11.4"
